changed links to instagram

--- a/Page-1.html
+++ b/Page-1.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="​Happiness &amp;amp; Mindfulness Courses, Welcome Message, Benefits of working with us​, 01, 02, 03, 04, 05, 06, ​How Coaching Works, ​How and where to learn mindfulness, Meet The Team
 Our Professionals, ​Start using Our App for free">
     <meta name="description" content="">
-    <title>Page 1</title>
+    <title>Pricing</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Page-1.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -115,7 +115,7 @@ Our Professionals, ​Start using Our App for free">
                 <div class="u-container-layout u-container-layout-1">
                   <h2 class="u-text u-text-1">What are you waiting for?</h2>
                   <p class="u-text u-text-2">Contact us now!</p>
-                  <a href="https://nicepage.com/templates" class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1">Talk to us on instagram</a>
+                  <a href="https://www.instagram.com/quickstartenglish/" class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1">Talk to us on instagram</a>
                 </div>
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-size-26 u-layout-cell-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
