--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,9 @@ Our Professionals, ​Start using Our App for free">
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-spacing-20 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-4-base" href="Home.html" style="padding: 10px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-4-base" href="Page-1.html" style="padding: 10px;">Pricing</a>
-</li></ul>
+
+</li>
+<li class="u-nav-item"><a class="u-button-style u-nav-link" href="policy.html">Policy</a></li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
