--- a/Page-1.html
+++ b/Page-1.html
@@ -45,7 +45,8 @@ Our Professionals, ​Start using Our App for free">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-1.html">Pricing</a>
-</li></ul>
+</li>
+<li class="u-nav-item"><a class="u-button-style u-nav-link" href="policy.html">Policy</a></li></ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
