--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@ Our Professionals, ​Start using Our App for free">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-1.html">Pricing</a>
-</li></ul>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-1.html">Pricing</a></li>
+     <li class="u-nav-item"><a class="u-button-style u-nav-link" href="policy.html">Policy</a></li>
+</ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
@@ -152,6 +153,7 @@ Our Professionals, ​Start using Our App for free">
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b1d3"><div class="u-clearfix u-sheet u-sheet-1">
       <p class="u-small-text u-text u-text-variant u-text-1">Nothing...Just efficient<br>
       </p>
+
     </div></footer>
     
     
