--- a/Page-1.html
+++ b/Page-1.html
@@ -150,6 +150,7 @@ Our Professionals, ​Start using Our App for free">
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b1d3"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Nothing...Just efficient<br>
         </p>
+        <a href="policy.html" class="u-small-text u-text u-text-variant u-text-1">Policies</a>
       </div></footer>
     
   
