--- a/policy.html
+++ b/policy.html
@@ -11,5 +11,8 @@
         <form action="https://docs.google.com/document/d/1er3CqKwjIfzqGq3P2D9HaV3PHX_Kvpa7igxb94EwIcU/edit?usp=sharing">
             <input type="submit" value="Privacy Policy"/>
         </form>
+        <form action="https://docs.google.com/document/d/1H3AZTkv5GPp_SkSDMkVaAEq8aXNcR6G2cqD671QT3L0/edit?usp=sharing">
+            <input type="submit" value="Refund Policy"/>
+        </form>
     </body>
 </html>
