--- a/Home.html
+++ b/Home.html
@@ -58,7 +58,7 @@ Our Professionals, ​Start using Our App for free">
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-edee" data-image-width="1980" data-image-height="1134">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-palette-1-base u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0">QuickStart English</h1>
-        <p class="u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">由DSE英文喺一程飛機，一本 BNO，一個決定，孩子就突然要承受適應 GCSE英語嘅壓力，可以點解決？喺 Quickstart，我哋唔單止有效降，時間仲可以好靈活。由一班考完 GCSE嘅學生運作，唔單止有最緊貼考試 pattern資訊，仲可以全面了解學生困難，按照能力，調整一對一嘅網上課程。</p>
+        <p class="u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">由DSE英文喺一程飛機，一本 BNO，一個決定，孩子就突然要承受適應 GCSE英語嘅壓力，可以點解決？喺 Quickstart，我哋唔單止有效率，時間仲可以好靈活。由一班考完 GCSE嘅學生運作，唔單止有最緊貼考試 pattern資訊，仲可以全面了解學生困難，按照能力，調整一對一嘅網上課程。</p>
         <a href="Page-1.html" class="u-active-palette-4-base u-border-4 u-border-active-palette-4-base u-border-hover-palette-4-base u-border-palette-4-base u-btn u-btn-round u-button-style u-hover-palette-4-base u-radius-50 u-text-active-white u-text-hover-white u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500">Pricing<br>
         </a>
         <a href="https://nicepage.com/web-design" class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-2">Find us on instagram</a>
